# syncpack

./: CHANGELOG.md  Cargo.toml  package.json
crates/syncpack-specifier/: Cargo.toml
crates/syncpack-specifier/benches/: specifier_parsing.rs
crates/syncpack-specifier/src/: alias.rs  catalog.rs  complex_semver.rs  exact.rs  file.rs  get_node_range_test.rs  get_semver_number_test.rs  git.rs  has_same_release_channel_as_test.rs  has_same_version_number_as_test.rs  is_eligible_update_for_test.rs  latest.rs  lib.rs  link.rs  major.rs  minor.rs  new_test.rs  ordering_test.rs  parser.rs  range.rs  range_major.rs  range_minor.rs  satisfies_all_test.rs  tag.rs  test_faker.rs  update_target.rs  url.rs  with_node_version_test.rs  with_range_test.rs  workspace_protocol.rs  workspace_specifier.rs
npm/: index.cjs
src/: catalogs.rs  cli.rs  context.rs  dependency.rs  group_selector.rs  group_selector_test.rs  instance.rs  instance_state.rs  instance_test.rs  main.rs  package_json.rs  package_json_test.rs  packages.rs  rcfile.rs  rcfile_test.rs  registry.rs  registry_client.rs  registry_updates.rs  version_group.rs  visit_packages.rs
src/commands/: fix.rs  fix_mismatches.rs  format.rs  json.rs  lint.rs  lint_semver_ranges.rs  list.rs  list_mismatches.rs  prompt.rs  set_semver_ranges.rs  update.rs
src/dependency/: mod.rs
src/group_selector/: group_selector_test.rs  mod.rs  pattern_matcher_test.rs
src/instance/: instance_test.rs  mod.rs
src/rcfile/: discovery.rs  javascript.rs  json.rs  package_json.rs  semver_group.rs  yaml.rs
src/registry/: client.rs  client_test.rs  (+1 more)
(+22 files in other folders)
